--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,101 @@
-header{
-    grid-area: hd;
-    display: flex;
-    height: 15vh;
-    margin: 25px;
-    align-items: left;
+
+
+@media screen and (max-width: 500px) {
+    #wrapper{
+        display: grid;
+        grid-template-columns: 75vh, 60vh, 30vh, 50vh, 50vh, 30vh;
+        grid-template-rows: auto;
+        width: 100vw;
+        grid-template-areas: 
+        'hd'
+        'mn'
+        'sc'
+        'nh'
+        'ar'
+        'ft'
+        ;
+}
+    
+    header{
+        grid-area: hd;
+        display: flex;
+        margin: 25px;
+        align-items: left;
+        background-color: chartreuse;
+    }
+    
+    main{
+        grid-area: mn;
+        display: flex;
+        background-image: url(/img/utsida\ placeholder.jpg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+}
+    section{
+        grid-area: sc;
+        display: flex;
+        background-color: chocolate;
+    }
+
+    #nyheter{
+        grid-area: nh;
+        display: flex;
+        background-color: red;
+    }
+
+    #arbetare{
+        grid-area: ar;
+        display: flex;
+        background-color: cornflowerblue;
+    }
+
+    footer{
+        grid-area: ft;
+        display:flex;
+        background-color: #333;
+    }
 }
 
-main{
-    grid-area: mn;
-    display: flex;
-    background-image: url(/img/utsida\ placeholder.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height: 60vh;
-    width: 100vw;
-}
+/* Style the navigation menu */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+    position: relative;
+  }
+  
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  .topnav #myLinks {
+    display: none;
+  }
+  
+  /* Style navigation menu links */
+  .topnav a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+    width: auto;
+  }
+  
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    background: black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    
+  }
+  
+  /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Style the active link (or home/logo) */
+  .active {
+    background-color: #04AA6D;
+    color: white;
+  }
