--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
+body{
+  margin: 0px;
+}
+
 
 
 @media screen and (max-width: 500px) {
     #wrapper{
         display: grid;
-        grid-template-columns: 75vh, 60vh, 30vh, 50vh, 50vh, 30vh;
-        grid-template-rows: auto;
-        width: 100vw;
+        grid-template-columns: auto;
+        grid-template-rows: 18vh 50vh 35vh 50vh 65vh 20vh;
+        width: 100%;
         grid-template-areas: 
         'hd'
         'mn'
@@ -15,60 +19,82 @@
         'ft'
         ;
 }
-    
+
+  h1{
+    font-size: 33px;
+  }
+
     header{
         grid-area: hd;
         display: flex;
-        margin: 25px;
+        gap: 30px;
+        margin: 0px;
         align-items: left;
         background-color: chartreuse;
     }
-    
+
     main{
         grid-area: mn;
-        display: flex;
+        display: grid;
         background-image: url(/img/utsida\ placeholder.jpg);
         background-repeat: no-repeat;
         background-size: 100%;
 }
     section{
         grid-area: sc;
-        display: flex;
+        display: grid;
         background-color: chocolate;
+    }
+
+    .knapp{
+      display: flex;
+      padding: 10px;
     }
 
     #nyheter{
         grid-area: nh;
-        display: flex;
+        display: grid;
         background-color: red;
     }
 
     #arbetare{
         grid-area: ar;
-        display: flex;
+        display: grid;
         background-color: cornflowerblue;
+    }
+
+    .agare{
+      width: 100%;
     }
 
     footer{
         grid-area: ft;
-        display:flex;
+        display:grid;
         background-color: #333;
     }
+
+
+    .nyhetsbild{
+      max-height: 70px;
+      max-width: 80px ;
+    }
+
+
 }
 
-/* Style the navigation menu */
+/* Style the navigation menu
 .topnav {
     overflow: hidden;
     background-color: #333;
     position: relative;
   }
   
-  /* Hide the links inside the navigation menu (except for logo/home) */
+  Hide the links inside the navigation menu (except for logo/home)
   .topnav #myLinks {
     display: none;
   }
   
-  /* Style navigation menu links */
+    Style navigation menu links
   .topnav a {
     color: white;
     padding: 14px 16px;
@@ -78,7 +104,7 @@
     width: auto;
   }
   
-  /* Style the hamburger menu */
+   Style the hamburger menu 
   .topnav a.icon {
     background: black;
     display: block;
@@ -88,14 +114,14 @@
     
   }
   
-  /* Add a grey background color on mouse-over */
+  Add a grey background color on mouse-over
   .topnav a:hover {
     background-color: #ddd;
     color: black;
   }
   
-  /* Style the active link (or home/logo) */
+   Style the active link (or home/logo)
   .active {
     background-color: #04AA6D;
-    color: white;
-  }
+    color: white;   
+  }*/
